@@ -236,6 +236,7 @@ static token tokens [] = {
   {"RESTORE",   7, 3, TYPE_ONEBYTE,     BASIC_TOKEN_RESTORE,  TYPE_ONEBYTE, BASIC_TOKEN_RESTORE,    FALSE,  TRUE},
   {"RETURN",    6, 1, TYPE_ONEBYTE,     BASIC_TOKEN_RETURN,   TYPE_ONEBYTE, BASIC_TOKEN_RETURN,     TRUE,   FALSE},
   {"RIGHT$(",   7, 2, TYPE_FUNCTION,    BASIC_TOKEN_RIGHT,    TYPE_FUNCTION, BASIC_TOKEN_RIGHT,     FALSE,  FALSE},
+  {"RND(",      4, 4, TYPE_FUNCTION,    BASIC_TOKEN_RNDPAR,   TYPE_FUNCTION, BASIC_TOKEN_RNDPAR,    FALSE,  FALSE},
   {"RND",       3, 2, TYPE_FUNCTION,    BASIC_TOKEN_RND,      TYPE_FUNCTION, BASIC_TOKEN_RND,       TRUE,   FALSE},
   {"RUN",       3, 2, TYPE_ONEBYTE,     BASIC_TOKEN_RUN,      TYPE_ONEBYTE, BASIC_TOKEN_RUN,        TRUE,   FALSE},
   {"SGN",       3, 2, TYPE_FUNCTION,    BASIC_TOKEN_SGN,      TYPE_FUNCTION, BASIC_TOKEN_SGN,       FALSE,  FALSE}, /* 118 */
