@@ -13,6 +13,8 @@ ChangeLog for Matrix Brandy - as forked from Sourceforge after V1.20.1
 - Graphics: Hopefully fixed a triangle drawing bug.
 - BASIC: Fix COLOUR(r,g,b) function to return correct values in 256-colour
   modes.
+- BASIC: Fix behaviour of RND followed by a space before parentheses to match
+  ARM and 6502 BBC BASIC.
 
 * V1.22.11 - 11 July 2021
 - System: Mouse position wasn't taking into account change of ORIGIN.
